--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Sagun Karki{% endblock %}
 
 {% block content %}
 
@@ -9,7 +9,7 @@
     <img src="{{ url_for('static', filename='images/profile-img.jpg') }}" 
          alt="Sagun Karki" 
          class="rounded-circle profile-photo" 
-         style="width: 256px; height: 256px; object-fit: cover;">
+         style="width: 256px; height: 256px; object-fit: cover; filter: brightness(0.85);">
     <!-- Name -->
     <h1 class="mt-3">Sagun Karki</h1>
 
