--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -40,8 +40,8 @@
             </div>
             <div class="col-md-9">
                 <h4>University of Nebraska-Lincoln</h4>
-                <p><strong>Bachelor of Science in Computer Science</strong> | Minor in Mathematics | May 2026</p>
-                <p>Relevant Coursework: Statistics and Probability, Data Structures and Algorithms, Software Engineering.</p>
+                <p><strong>Bachelor of Science in Data and Computer Science</strong> | Minor in Mathematics | May 2026</p>
+                <p>Relevant Coursework: Introduction to Machine Learning, Information Retrieval System, Statistics and Probability, Data Structures and Algorithms, Software Engineering.</p>
             </div>
         </div>
     </div>
